// Copyright (c) 2024 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package com.digitalasset.canton.traffic.v0;

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

// Full traffic status for a member at a point in time
message MemberTrafficStatus {
  // Represents a top up event valid from a certain timestamp
  message TopUpEvent {
    // Timestamp at which the top up becomes valid (inclusive)
    google.protobuf.Timestamp effective_at = 1;
    // Topology transaction serial id that is used to discriminate between top ups with the same effective_at, which is possible
    uint32 serial = 2;
    // Traffic limit of the top up
    uint64 extra_traffic_limit = 3;
  }

  // Member the status is about
  string member = 1;
  // Total extra traffic bought. Optional.
  google.protobuf.UInt64Value total_extra_traffic_limit = 2;
  // Total extra traffic consumed
  uint64 total_extra_traffic_consumed = 3;
  // Current and future top up events that have been registered but are not necessarily active yet
  repeated TopUpEvent top_up_events = 4;
  // Timestamp at which the status is valid
  google.protobuf.Timestamp ts = 5;
}
