// Copyright (c) 2023 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package com.digitalasset.canton.participant.admin.v0;

import "com/digitalasset/canton/traffic/v0/member_traffic_status.proto";

/*
 * Service to retrieve information about the traffic state of the participant.
 */
service TrafficControlService {
  rpc TrafficControlState(TrafficControlStateRequest) returns (TrafficControlStateResponse);
}

message TrafficControlStateRequest {
  string domain_id = 1; // Domain id for which to retrieve the traffic state
}

message TrafficControlStateResponse {
  com.digitalasset.canton.traffic.v0.MemberTrafficStatus traffic_state = 1;
}
